--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
         "start": "node src/server/index.js",
         "test": "npx mocha ./__test__ --exit"
     },
+    "husky": {
+        "hooks": {
+            "pre-commit": "node_modules/.bin/eslint \"**/*.js\" --ignore-pattern node_modules/"
+        }
+    },
     "dependencies": {
         "@hapi/joi": "17.1.0",
         "body-parser": "1.18.2",
@@ -28,7 +33,8 @@
         "eslint-config-prettier": "6.10.0",
         "eslint-plugin-import": "2.20.1",
         "eslint-plugin-node": "11.0.0",
-        "eslint-plugin-prettier": "3.1.2"
+        "eslint-plugin-prettier": "3.1.2",
+        "husky": "^4.2.3"
     },
     "config": {
         "commitizen": {
