--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "compression": "1.7.1",
         "cookie-parser": "1.4.3",
         "cors": "2.8.5",
+        "csv-parser": "^2.3.2",
         "eslint-config-airbnb": "18.0.1",
         "express": "4.16.2",
         "helmet": "3.9.0",
@@ -34,7 +35,7 @@
         "eslint-plugin-import": "2.20.1",
         "eslint-plugin-node": "11.0.0",
         "eslint-plugin-prettier": "3.1.2",
-        "husky": "^4.2.3"
+        "husky": "4.2.3"
     },
     "config": {
         "commitizen": {
