--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,20 @@
 {
-    "extends": ["airbnb-base"],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+       "project": "./tsconfig.json"
+    },
+    "extends": [
+        "airbnb-base",
+        "airbnb-typescript/base"
+    ],
     "env": {
         "es6": true,
         "node": true,
         "mocha": true
     },
+    "plugins": ["prettier"],
     "rules": {
-        "indent": [
+        "@typescript-eslint/indent": [
             2,
             4,
             {
