--- a/package.json
+++ b/package.json
@@ -20,22 +20,30 @@
         "cookie-parser": "1.4.3",
         "cors": "2.8.5",
         "csv-parser": "^2.3.2",
-        "eslint-config-airbnb": "18.0.1",
         "express": "4.16.2",
         "helmet": "3.9.0",
         "mocha": "7.1.0",
         "mongoose": "5.7.5",
-        "supertest": "4.0.2"
+        "supertest": "4.0.2",
+        "eslint-config-airbnb": "18.0.1"
     },
     "devDependencies": {
+        "@types/express": "^4.17.4",
+        "@types/mongoose": "^5.7.8",
+        "@types/node": "^13.11.0",
+        "@typescript-eslint/eslint-plugin": "^2.26.0",
+        "@typescript-eslint/parser": "^2.26.0",
         "cz-conventional-changelog": "3.1.0",
-        "eslint": "6.8.0",
+        "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "14.0.0",
+        "eslint-config-airbnb-typescript": "^7.2.0",
         "eslint-config-prettier": "6.10.0",
-        "eslint-plugin-import": "2.20.1",
+        "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-node": "11.0.0",
         "eslint-plugin-prettier": "3.1.2",
-        "husky": "4.2.3"
+        "nodemon": "^2.0.2",
+        "ts-node": "^8.8.1",
+        "typescript": "^3.8.3"
     },
     "config": {
         "commitizen": {
