--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
         "eslint-config-airbnb": "18.0.1"
     },
     "devDependencies": {
-        "@types/express": "^4.17.4",
-        "@types/mongoose": "^5.7.8",
-        "@types/node": "^13.11.0",
+        "@types/express": "4.17.4",
+        "@types/mongoose": "5.7.8",
+        "@types/node": "13.11.0",
         "@typescript-eslint/eslint-plugin": "^2.26.0",
         "@typescript-eslint/parser": "^2.26.0",
         "cz-conventional-changelog": "3.1.0",
@@ -38,12 +38,12 @@
         "eslint-config-airbnb-base": "14.0.0",
         "eslint-config-airbnb-typescript": "^7.2.0",
         "eslint-config-prettier": "6.10.0",
-        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-import": "2.20.2",
         "eslint-plugin-node": "11.0.0",
         "eslint-plugin-prettier": "3.1.2",
-        "nodemon": "^2.0.2",
-        "ts-node": "^8.8.1",
-        "typescript": "^3.8.3"
+        "nodemon": "2.0.2",
+        "ts-node": "8.8.1",
+        "typescript": "3.8.3"
     },
     "config": {
         "commitizen": {
