feat: almost done

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,12 @@
       ]
     },
     "include": [
-      "src/**/*"
+      "./src/**/*"
     ],
     "exclude": [
-      "node_modules"
+      "migrations",
+      "node_modules",
+      
     ]
   }
   
