--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "project": "./tsconfig.json"
+        "project": "tsconfig.json"
     },
     "extends": [
         "airbnb-base",
@@ -28,7 +28,7 @@
             {
                 "arrowParameter": false,
                 "variableDeclaration": true
-              }
+            }
         ],
         "strict": 0,
         "no-var": "error",
