--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     },
     "dependencies": {
         "@hapi/joi": "17.1.0",
+        "@types/compression": "^1.7.0",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.6",
+        "@types/helmet": "0.0.45",
         "body-parser": "1.18.2",
         "chai": "4.2.0",
         "chai-fs": "2.0.0",
@@ -20,12 +24,12 @@
         "cookie-parser": "1.4.3",
         "cors": "2.8.5",
         "csv-parser": "^2.3.2",
+        "eslint-config-airbnb": "18.0.1",
         "express": "4.16.2",
         "helmet": "3.9.0",
         "mocha": "7.1.0",
         "mongoose": "5.7.5",
-        "supertest": "4.0.2",
-        "eslint-config-airbnb": "18.0.1"
+        "supertest": "4.0.2"
     },
     "devDependencies": {
         "@types/express": "4.17.4",
