--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
         "prettier"
     ],
     "rules": {
+        "@typescript-eslint/no-implied-eval": 0,
+        "@typescript-eslint/no-throw-literal": 0,
         "@typescript-eslint/indent": [
             2,
             4,
