--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "removeComments": true,
       "sourceMap": false,
       "resolveJsonModule": true,
-      "esModuleInterop": true, 
+      "esModuleInterop": true,
+      "pretty": true,
       "plugins": [
         {
           "name": "tslint-language-service"
@@ -19,9 +20,7 @@
       "./src/**/*"
     ],
     "exclude": [
-      "migrations",
       "node_modules",
-      
     ]
   }
   
